[package]
name = "bongo-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
dirs = "6.0.0"
evdev = "0.13.1"
glib = "0.20.10"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
limbo = { git = "https://github.com/tursodatabase/limbo.git", branch = "main", version = "0.0.22-pre.1" }
tokio = { version = "1.45.1", features = ["full"] }
